cleaned shadow code, fixed dark mode shadows

--- a/app/globals.css
+++ b/app/globals.css
@@ -69,7 +69,6 @@ body {
 .navbar {
   z-index: 1000;
   background: var(--background);
-  backdrop-filter: blur(10px);
   box-shadow: var(--shadow-effect);
   outline: none;
   border: none;
